--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <!-- Latest compiled and minified CSS & JS -->
+        <link rel="stylesheet" media="screen"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -20,29 +24,30 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="banner">
+        <div class="banner col-md-4 col-md-offset-4">
 
             <ul>
-                <li>Characters</li>
-                <li>Books</li>
-                <li>Houses</li>
+                <li><a onclick="apirender(this.name)" name="characters" class="nav">Characters</a></li>
+                <li><a onclick="apirender(this.name)" name="books" class="nav">Books</a></li>
+                <li><a onclick="apirender(this.name)" name="houses" class="nav">Houses</a></li>
             </ul>
 
         </div>
-
-        <div class="wrapper">
-            <label>Name</label>
-            <input type="text" id="name">
-            <button onclick="myFunction()">Submit</button>
-
+        <div class="wrapper col-md-4 col-md-offset-4">
+            <ul>
+                <li><label id="searchName">CHARACTERS NAME</label></li>
+                <li><input type="text" id="name"></li>
+                <li><button onclick="myFunction()">Submit</button></li>
+            </ul>
             <div id="test">
-                <pre id="result"></pre>
+                <!-- <pre id="result"></pre> -->
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
